--- a/popup.css
+++ b/popup.css
@@ -90,11 +90,12 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 30px;
 }
 
 .deduction-title {
     flex: 1;
-    margin-right: 10px;
+    margin: auto;
     word-break: break-word;
 }
 
@@ -118,6 +119,7 @@ body {
     font-size: 12px;
     border-radius: 4px;
     cursor: pointer;
+    margin: auto;
 }
 
 .remove-btn:hover {
